# agin-sensors

./: .env.template  .gitignore  Cargo.toml  Dockerfile  Dockerfile-old  README.md  compose.yaml  global_schema.json  organizations_schema.json  project_schema.json
aginsensors_core/: Cargo.toml  global.yaml  global_schema.json
aginsensors_core/src/: connector.rs  connectors.rs  database.rs  databases.rs  global_config.rs  lib.rs  macros.rs  main.rs  modifier.rs  organizations.rs  project_config.rs  state.rs
aginsensors_core/src/connectors/: mqtt.rs  socketio.rs
aginsensors_core/src/databases/: influx.rs  prometheus.rs
aginsensors_core/src/macros/: connector.rs  connectors.rs  database.rs  databases.rs  modifier.rs
config/: global.yaml  organizations.yaml
connector_modbus/: Cargo.toml
connector_modbus/src/: lib.rs
connector_mqtt/: Cargo.toml
connector_mqtt/src/: beanair.rs  lib.rs  main.rs
connector_socketio/: Cargo.toml
connector_socketio/src/: lib.rs  middleware.rs  socket.rs
connector_socketio/src/socket/: handle_batch.rs  handle_single.rs  read_request.rs
daemon/: Cargo.toml  global.yaml
daemon/src/: filter.rs  global_config.rs  main.rs  organizations.rs  project_config.rs  schema.rs  state.rs
database_influx/: Cargo.toml
database_influx/src/: lib.rs
landing_page/: Dockerfile  compose.yaml  package.json  panda.config.ts  pnpm-lock.yaml
landing_page/app/: layout.tsx  page.tsx
landing_page/app/demo/: page.tsx  styles.ts
landing_page/lib/: config.ts
landing_page/lib/components/: Logo.tsx  index.ts
landing_page/lib/components/Button/: index.tsx  styles.ts
landing_page/lib/components/Card/: index.tsx  styles.ts
landing_page/lib/components/Demo/: index.tsx  styles.ts
landing_page/lib/components/Download/: index.tsx  styles.ts
landing_page/lib/components/FeatureCard/: index.tsx  styles.ts
landing_page/lib/components/FeatureIcon/: index.tsx  styles.ts
landing_page/lib/components/FeaturesGallery/: index.tsx  styles.ts
landing_page/lib/components/FeaturesGallery/Feature/: Highlight.tsx  index.tsx  styles.ts
landing_page/lib/components/FeaturesGrid/: index.tsx  styles.ts
landing_page/lib/components/Footer/: index.tsx  styles.ts
landing_page/lib/components/Hero/: index.tsx  styles.ts
landing_page/lib/components/Navbar/: index.tsx  styles.ts
landing_page/lib/components/Navbar/NavbarLink/: index.tsx  styles.ts
landing_page/lib/components/Privacy/: index.tsx  styles.ts
landing_page/lib/components/Subtitle/: index.tsx  styles.ts
landing_page/lib/components/Title/: index.tsx  styles.ts
modifier_template/: Cargo.toml
modifier_template/src/: lib.rs
modules/: Cargo.toml
modules/src/: connector.rs  connectors.rs  database.rs  databases.rs  lib.rs  macros.rs  modifiers.rs
modules/src/macros/: connectors.rs  databases.rs  modifiers.rs
socketio_connector/: Cargo.toml
