[package]
name = "aginsensors_core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
color-eyre = "0.6.5"
enum_dispatch = "0.3.13"
influxdb = "0.7.2"
paste = "1.0.15"
schemars = { version = "1.0.4", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
