[package]
name = "aginsensors_core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.5"
enum_dispatch = "0.3.13"
futures = "0.3.31"
influxdb2 = "0.5.2"
influxdb2-structmap = "0.2.0"
paste = "1.0.15"
schemars = { version = "1.0.4", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
