[package]
name = "connector_mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
aginsensors_core = { version = "0.1.0", path = "../aginsensors_core" }
async-trait = "0.1.88"
binrw = "0.15.0"
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.5"
futures = "0.3.31"
hex = "0.4.3"
influxdb2 = "0.5.2"
influxdb2-structmap = "0.2.0"
paste = "1.0.15"
rumqttc = "0.24.0"
schemars = { version = "1.0.4", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
