[package]
name = "connector_socketio"
version = "0.1.0"
edition = "2024"

[dependencies]
aginsensors_core = { version = "0.1.0", path = "../aginsensors_core" }
async-trait = "0.1.88"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.5"
futures = "0.3.31"
influxdb2 = "0.5.2"
influxdb2-structmap = "0.2.0"
paste = "1.0.15"
schemars = { version = "1.0.4", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
socketioxide = { version = "0.17.2", features = [
    "state",
    "tracing",
    "extensions",
] }
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
