[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
aginsensors_core = { version = "0.1.0", path = "../aginsensors_core" }
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.5"
database_influx = { version = "0.1.0", path = "../database_influx" }
dotenvy = "0.15.7"
modules = { version = "0.1.0", path = "../modules" }
schemars = { version = "1.0.4", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
